--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ form{
 	margin-top: 20px;
 }
 .main_div{
-		background-image: url(p2.JPG);
+		background-image: url(penquin3.jpg);
 	}
 	.output{
 		width: 90%;
